# pyxctsk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASING.md  UPDATE_INSTRUCTIONS.md  XCTRACK_ANALYSIS.md  cspell-dictionary.txt  cspell.json  lefthook.yml  mypy.ini  pyproject.toml  test_waypoints.py  test_web.py
.github/: copilot-instructions.md
.github/workflows/: publish.yml  release.yml
docs/: Audit-of-pyxctsk-Route-Optimization.md  XCTrack-Optimized-Distance-Findings.md
docs/adr/: 0001-ding-xie-jiang-route-optimizer.md  0002-circle-boundary-touching-semantics.md  0003-earth-model-handling.md  0004-remove-beam-search-api.md  README.md
docs/arch-review/: 2026-06-30-distance-qr.html  2026-06-30-distance-qr.md
scripts/: README.md  SIMPLIFIED_USAGE.md  XCTSK_AUTOMATION_README.md  XCTSK_AUTOMATION_SUMMARY.md  add_line_to_filenames.sh  changelog_extract.py  check_qr_deps.py  commands.txt  distance_comparison.py  external-repos.md  extract_qr_from_html.py  extract_task_data.py  goal_definition.txt  release.sh  test_distance_calculations.py  test_qrcode_generation.py  test_xctsk_automation.py  xcontest_xctsk_tool.py
scripts/downloaded_tasks/geojson/: task_bevo.geojson  task_dami.geojson  task_duna.geojson  task_fobe_line.geojson  task_gibe.geojson  task_gimi.geojson  task_lorili.geojson  task_luma.geojson  task_mega.geojson  task_motu_line.geojson  task_naxe.geojson  task_nife.geojson  task_noha_route.geojson  task_nohe.geojson  task_nori.geojson  task_nubu.geojson  task_pepi.geojson  task_piga_line.geojson  task_qavu.geojson  task_qoga_line.geojson  task_quno_line.geojson  task_vocu.geojson  task_waku.geojson  task_wovi.geojson  task_xiga.geojson  task_xise.geojson
scripts/downloaded_tasks/html/: task_bevo.html  task_dami.html  task_dami_route.html  task_duna.html  task_fobe_line.html  task_gibe.html  task_gimi.html  task_lorili.html  task_luma.html  task_mega.html  task_motu_line.html  task_naxe.html  task_nife.html  task_noha_route.html  task_nohe.html  task_nori.html  task_nubu.html  task_pepi.html  task_piga_line.html  task_qavu.html  task_qoga_line.html  task_quno_line.html  task_vocu.html  task_waku.html  task_wovi.html  task_xiga.html  task_xise.html
scripts/downloaded_tasks/html_cleaned/: task_bevo.geojson  task_bevo.html  task_dami.html  task_dami_route.html  task_duna.html  task_fobe_line.html  task_gibe.html  task_gimi.html  task_lorili.html  task_luma.html  task_mega.html  task_motu_line.html  task_naxe.html  task_nife.html  task_noha_route.html  task_nohe.html  task_nori.html  task_nubu.html  task_pepi.html  task_piga_line.html  task_qavu.html  task_qoga_line.html  task_quno_line.html  task_vocu.html  task_waku.html  task_wovi.html  task_xiga.html  task_xise.html
scripts/downloaded_tasks/json/: task_bevo.json  task_dami.json  task_duna.json  task_fobe_line.json  (+21 more)
scripts/path_opt/: pg_path_opt_chatgpt.py  pg_path_opt_gemini.py  promt_path_optimizer.md
scripts/task_viewer/: README.md  airscore_utils.py  api.py  app.py  shared.py
scripts/xctsk_files/: task_2020-07-07.xctsk  task_2024-09-16_3.xctsk  task_2025-01-19.xctsk  task_2025-01-20_1.xctsk  task_2025-01-21.xctsk  task_2025-01-22.xctsk  task_2025-01-23.xctsk  task_2025-01-24.xctsk  task_2025-01-25.xctsk  task_2025-01-28.xctsk  task_2025-01-29.xctsk  task_2025-01-30.xctsk  task_2025-01-31.xctsk  task_2025-02-17.xctsk  task_2025-03-06.xctsk  task_2025-05-18_1.xctsk  task_2025-05-24.xctsk  task_2025-06-10.xctsk  task_2025-06-11.xctsk  task_2025-06-12.xctsk  task_2025-06-13.xctsk  task_2025-06-14.xctsk  task_2025-07-14.xctsk
src/pyxctsk/: __init__.py  cli.py  distance.py  exceptions.py  geojson.py  goal_line.py  kml.py  optimization_config.py  parser.py  qrcode_encoding.py  qrcode_enums.py  qrcode_image.py  qrcode_models.py  qrcode_task.py  route_optimization.py  shared_enums.py  sss_calculations.py  task.py  task_distances.py  turnpoint.py  utils.py  visualization_common.py
src/xctrack/: __init__.py  __main__.py  cli.py  distance.py  exceptions.py  geojson.py  parser.py  qrcode_task.py  task.py  utils.py
src/xctrack_web/: README.md  __init__.py  app.py  cache_manager.py  cli.py  progress_tracker.py  pyproject.toml  routes.py  server.py  task_manager.py
src/xctrack_web/static/saved_tasks/: 20250607_231846_task_2025-05-18-metadata.json  20250607_234704_task_2024-02-24.xctsk  20250608_160143_task_2024-02-24-metadata.json  20250608_160208_task_2025-05-18-metadata.json  20250608_160208_task_2025-05-18.xctsk  20250608_160226_task_2025-05-24-metadata.json  20250608_160233_task_fuvu-metadata.json
src/xctrack_web/static/saved_tasks_metadata/: 20250607_231406_task_2025-05-24.json  20250607_234704_task_2024-02-24.json  20250607_234958_task_fuvu.json
src/xctrack_web/templates/: index.html  task.html
stubs/geopy/: __init__.pyi  distance.pyi
stubs/polyline/: __init__.pyi
stubs/pyzbar/: __init__.pyi
tests/: XCTSK_AUTOMATION_README.md  XCTSK_AUTOMATION_SUMMARY.md  __init__.py  conftest.py  qr_test_utils.py  task_2020-07-07.xctsk  task_distance_results.txt  task_fuvu.xctsk  task_jedu.xctsk  test_basic.py  test_core.py  test_distance.py  test_distance_basic.py  test_distance_comparison.py  test_distance_essential.py  test_distance_integration.py  test_distance_reference.py  test_distance_slow.py  test_geojson.py  test_goal_line.py  test_iterative_refinement.py  test_kml.py  test_qrcode.py  test_route_optimization.py  test_sss.py  test_sss_calculations.py  test_sss_route_bug.py  test_sss_route_visual.py  test_turnpoint.py  test_turnpoint_order.py  test_utils.py  test_waypoints.py  test_xctrack.py  test_xctsk_automation.py  xctsk_automation.py  xctsk_demo.py  xctsk_helper.sh
tests/data/: task_meta.xctsk
tests/visual_output/: sss_route_comparison.html  task_fuvu_route_comparison.html  task_jedu_route_comparison.html  task_meta_route_comparison.html
tests/xctsk/: task_2024-09-16_3.xctsk  task_2025-01-19.xctsk  task_2025-03-06.xctsk  task_2025-05-11.xctsk  task_2025-05-18_1.xctsk  task_2025-06-10.xctsk  task_2025-06-11.xctsk  task_2025-06-14.xctsk
(+104 files in other folders)
