[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyxctsk"
version = "0.2.0"
description = "Python implementation of XCTrack's task format"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Simon Steiner", email = "simonsteiner@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.2.0",
    "geopy>=2.4.0",
    "Pillow>=11.0.0",
    "polyline>=2.0.0",
    "pyproj>=3.7.0",
    "pyzbar>=0.1.9",
    "qrcode[pil]>=8.0.0",
    "scipy>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "beautifulsoup4>=4.9.0",
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.16.1",
    "pytest-cov>=2.0.0",
    "pytest>=6.0.0",
    "requests>=2.25.0",
]
web = [
    "flask>=2.0.0",
]
analysis = [
    "numpy>=1.21.0",
    "geographiclib>=2.0",
    "matplotlib>=3.3.0",
]

[tool.setuptools.package-data]
pyxctsk = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pyxctsk = "pyxctsk.cli:main"

[project.urls]
Repository = "https://github.com/simonsteiner/pyxctsk"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
max-line-length = 88
extend-ignore = "E501,E203"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
mypy_path = "stubs"

[[tool.mypy.overrides]]
module = ["geopy.*", "polyline.*", "pyzbar.*", "scipy.*", "qrcode.*", "optype.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
