[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyxctsk"
version = "0.3.0"
description = "Python implementation of XCTrack's task format"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Simon Steiner", email = "simonsteiner@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "geopy>=2.4.1",
    "Pillow>=11.3.0",
    "polyline>=2.0.2",
    "pyproj>=3.7.1",
    "pyzbar>=0.1.9",
    "qrcode[pil]>=8.2",
    "scipy>=1.16.0",
    "simplekml>=1.3.6",
]

[project.optional-dependencies]
dev = [
    "beautifulsoup4>=4.13.4",
    "black>=25.1.0",
    "deepdiff>=8.5.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.17.0",
    "pre_commit>=4.2.0",
    "pydocstyle>=6.3.0",
    "pytest-cov>=6.2.1",
    "pytest>=8.4.1",
    "requests>=2.32.4",
]
web = [
    "flask>=3.1.1",
]
analysis = [
    "geographiclib>=2.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
]

[tool.setuptools.package-data]
pyxctsk = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pyxctsk = "pyxctsk.cli:main"

[project.urls]
Repository = "https://github.com/simonsteiner/pyxctsk"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
max-line-length = 88
extend-ignore = "E501,E203"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
mypy_path = "stubs"

[[tool.mypy.overrides]]
module = ["geopy.*", "polyline.*", "pyzbar.*", "scipy.*", "qrcode.*", "optype.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
