[build-system]
requires = ["setuptools>=80.9", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyxctsk"
version = "0.5.0"
description = "Python implementation of XCTrack's task format"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Simon Steiner", email = "simonsteiner@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "geopy>=2.4.1",
    "Pillow>=11.3.0",
    "polyline>=2.0.2",
    "pyproj>=3.7.1",
    "qrcode[pil]>=8.2",
    "scipy>=1.16.0",
    "simplekml>=1.3.6",
    "zxing-cpp>=2.3.0",
]

[project.optional-dependencies]
web = [
    "flask>=3.1.1",
]
analysis = [
    "geographiclib>=2.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.13.4",
    "deepdiff>=8.5.0",
    "lefthook>=1.7.0",
    "mypy>=1.17.0",
    "pytest-cov>=6.2.1",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "ruff>=0.10.0",
]

[tool.setuptools.package-data]
pyxctsk = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
pyxctsk = "pyxctsk.cli:main"

[project.urls]
Repository = "https://github.com/simonsteiner/pyxctsk"

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]
# Vendored third-party code: never format or lint it.
extend-exclude = ["scripts/task_viewer/airscore_clone"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import sorting, D docstrings.
# E501 (line length) and E203 are left to the formatter.
select = ["E", "W", "F", "I", "D"]
ignore = ["E501", "E203"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["pyxctsk"]

[tool.ruff.lint.per-file-ignores]
# scripts/ holds utilities, not library code — don't require docstrings there.
"scripts/**" = ["D"]
# __init__.py re-exports; allow unsorted/star-style re-export conveniences.
"src/pyxctsk/__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
mypy_path = "stubs"

[[tool.mypy.overrides]]
module = ["geopy.*", "polyline.*", "zxingcpp.*", "scipy.*", "qrcode.*", "optype.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
