[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xctrack-web"
version = "1.0.0"
description = "Web interface for XCTrack task analysis and visualization"
readme = "README.md"
authors = [
    {name = "Simon", email = "simon@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "xctrack>=1.0.0",
    "flask>=2.0.0",
    "werkzeug>=2.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/simon/python-xctrack"
Repository = "https://github.com/simon/python-xctrack"
Documentation = "https://github.com/simon/python-xctrack/blob/main/README.md"
"Bug Tracker" = "https://github.com/simon/python-xctrack/issues"

[project.scripts]
xctrack-web = "xctrack_web.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools.package-dir]
xctrack_web = "."

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
